# rikemorais.project.horus

./: .flake8  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  pull_request.yml
docs/: index.md
docs/api/: load.md
faker/: modelo.py  products.py  s3.py  users.py
horus/: pyproject.toml
horus/etl/: extract.py  load.py  transform.py
horus/faker/: products.py  users.py
horus/utils/: spark_config.py
tests/: test_mongodb.py  test_python_version.py
