[tool.poetry]
name = "horus"
version = "0.1.0"
description = ""
authors = ["Henrique Morais <rikeaju@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
pytest = "^7.3.2"
pyspark = "^3.4.0"
tqdm = "^4.65.0"
pymongo = "^4.3.3"
faker = "^18.11.2"
boto3 = "^1.26.163"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''