[tool.poetry]
name = "horus"
version = "0.1.0"
description = ""
authors = ["Henrique Morais <rikeaju@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydocstyle = "^6.3.0"
pyspark = "^3.4.0"
tqdm = "^4.65.0"
pymongo = "^4.3.3"
faker = "^18.11.2"
boto3 = "^1.26.163"
flake8 = "^6.0.0"
interrogate = "^1.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.17"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''


[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["doc/*", ".git/*"]
line_length = 120
lines_after_imports = 2
# black compatibility
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build", "bitbucket", "tests", "*exceptions.py"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "."
badge-format = "svg"
